--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "plugins": ["react"],
   "rules": {
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
